--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 
-:root {
+body {
+  @apply bg-white text-gray-700 container mx-auto dark:bg-gray-900 dark:text-gray-300 
+}
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -22,5 +25,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  /* font-family: Arial, Helvetica, sans-serif; */
-}
+  font-family: Arial, Helvetica, sans-serif;
+} */
