--- a/app/globals.css
+++ b/app/globals.css
@@ -1,29 +1,16 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 body {
-  @apply bg-white text-gray-700 container mx-auto dark:bg-gray-900 dark:text-gray-300 
-}
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  @apply bg-neutral-50 text-black/90 container mx-auto dark:bg-neutral-950 dark:text-neutral-50
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+hr{
+  @apply my-8 border-gray-200 dark:border-gray-800
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .link {
+    @apply p-1 hover:bg-gray-200 hover:text-gray-700
   }
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
